# emotion_recognition

./: .gitignore  build_dataset.py  main.py  pyproject.toml  test_recognizer.py  train_recognizer.py
config/: emotion_config.py
network/callbacks/: trainingmonitor.py
network/io/: hdf5datasetgenerator.py
network/nn/conv/: alexnet.py  deepergooglenet.py  emotionvggnet.py  fcheadnet.py  lenet.py  minigooglenet.py  minivggnet.py  resnet.py  shallownet.py
output/: vggnet_emotion.json
