[project]
name = "emotion-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.13.0",
    "imutils>=0.5.4",
    "matplotlib>=3.10.3",
    "mxnet>=1.0.0.post1",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
]
